--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="container d-flex justify-content-center align-items-center h-100 width-100">
 	<div class="row">
 	<header class="text-center">	
-		<h1><strong>Site4Insight</h1>
+		<h1 contenteditable="true"><strong>Site<span style="color: #47476b">4</span>Insight</h1>
 			<h2 class="text-uppercase"><strong>Creating the Perfection</h2>
 	</header>
 	<div class="buffer col-12"></div>
