--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 			<h2 class="text-uppercase"><strong>Creating the Perfection</h2>
 	</header>
 	<div class="buffer col-12"></div>
-	<section class="text-center col-12">	
+	<section class="text-center col-12">
+		<hr style="margin: auto;" class="short">
+		<br>	
 		<hr style="margin: auto;">
 		<a href="https://mailchi.mp/c99de550bf81/startup">
 		<br>
